--- a/Coursera_Capstone.ipynb
+++ b/Coursera_Capstone.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## IBM Data Science Professional Specialization - Coursera\n",
     "This notebook will be mainly used for the capstone project : Specialization in Data Science of IBM  \n",
-    "Coursera platform : https://www.coursera.org/professional-certificates/ibm-data-science\n"
+    "Coursera platform : https://www.coursera.org/professional-certificates/ibm-data-science  \n",
+    "\n",
+    "In this notebook we import Pandas and Numpy library and print **\"Hello Capstone Project Course!\"**.\n"
    ]
   },
   {
