capstone project week 3 part1

--- a/Week3_toronto_part1.ipynb
+++ b/Week3_toronto_part1.ipynb
@@ -1077,10 +1077,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "map_toronto.save(\"map_toronto1.html\")"
+   ]
   },
   {
    "cell_type": "code",
