capstone project week 3 part1

--- a/Week3_toronto_part1.ipynb
+++ b/Week3_toronto_part1.ipynb
@@ -30,7 +30,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To view this project with map : https://nbviewer.jupyter.org/github/mbouayoun/Coursera_Capstone/blob/master/Week3_toronto_part1.ipynb"
+    "To view this project with map :  \n",
+    "https://nbviewer.jupyter.org/github/mbouayoun/Coursera_Capstone/blob/master/Week3_toronto_part1.ipynb"
    ]
   },
   {
